<resources>
    <string name="app_name">Яндекс Мамы</string>
    <string name="action_settings">settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="clothesfor03child">Как одеть ребенка от 0 до 3 месяцев на летнюю прогулку</string>
    <string name="author_name">Наталья Бортникова</string>
    <string name="nataly_bortnikova_workplace">педиатр Перинатального медицинского центра «Мать и дитя»</string>
    <string name="nataly_bortnikova_speech">У родителей часто возникают вопросы, какую одежду выбрать для совсем маленького ребенка, чтобы во время прогулки он не замерз или не перегрелся. Я составила список вещей, которые точно не будут лишними в гардеробе малыша и подготовила несколько советов по организации прогулки.</string>
    <string name="walk_with_child">Чтобы понять, жарко ребенку или холодно, приложите руку под шею — если кожа горячая и влажная, значит ребенку жарко, а если холодная, нужно укрыть его пледом, или прогулку пора заканчивать.</string>
    <string name="walk_with_child_header">Как гулять?</string>
    <string name="choose_clothes_header">Какую выбрать одежду</string>
    <string name="choose_clothes">Летняя одежда должна защищать от солнечных лучей, перегрева и переохлаждения. Выбирая комплект, ориентируйтесь на температуру воздуха в тени. \n\nВажно, чтобы одежда была сшита из натуральных материалов — хлопка, ситца или льна (для детей старше 5 месяцев). В ней ребенку будет не жарко, и от ткани не возникнет раздражение.</string>
    <string name="what_you_should_buy">Что купить?</string>
    <string name="twelve_comments">12 отзывов</string>
    <string name="body_with_long_sleeve">Боди Unique с длинным рукавом</string>
    <string name="one_hundred_percent_cotton">100% хлопок</string>
    <string name="many_rubles">от 549 Р</string>
    <string name="not_many_rubles">от 449 Р</string>
    <string name="go_to_shopping">Продолжить выбор</string>
    <string name="for_moms">Для мамочек</string>
    <string name="for_childs">Для детей</string>
    <string name="imageToTransit">image_to_transit</string>
    <string name="product_catalog">Каталог товаров</string>
    <string name="popular_advices">популярные советы</string>
    <string name="popular_products">популярные товары</string>
    <string name="about">О товаре</string>
    <string name="choose_size">Выберите размер</string>
    <string name="size_table">Таблица размеров</string>
    <string name="order_delivery_sum">4409Р</string>
    <string name="order_delivery_sum_text">Итого с учетом доставки</string>
    <string name="oreder_delivery">Доставка</string>
    <string name="oreder_contects">Контакты</string>
    <string name="order_payments">Оплата</string>
    <string name="next">Далее</string>
    <string name="delivery_city">Город</string>
    <string name="delivery_street">АДРЕС: УЛИЦА, ДОМ</string>
    <string name="delivery_house">НОМЕР КВАРТИРЫ ИЛИ ОФИСА</string>
    <string name="delivery_comment">КОММЕНТАРИЙ К ЗАКАЗУ</string>
    <string name="delivery_shop">ДОСТАВКА ИЗ МАГАЗИНА</string>
    <string name="delivery_shop1_text">Курьером в пределах МКАД</string>
    <string name="delivery_shop1_price">390 H, 30 августа</string>
    <string name="delivery_shop_2">ДОСТАВКА ИЗ МАГАЗИНА ДЕТСКИЙ МИР</string>
    <string name="delivery_shop2_text">Курьером до двери</string>
    <string name="delivery_shop2_price">бесплатно, завтра</string>
    <string name="delivery_pickup_text">Выберите пункт самовывоза</string>
    <string name="first_name">ИМЯ</string>
    <string name="last_name">ФАМИЛИЯ</string>
    <string name="phone">ТЕЛЕФОН</string>
    <string name="email">ЭЛЕКТРОННАЯ ПОЧТА</string>
    <string name="payments_cash">Наличными</string>
    <string name="payments_card">Картой</string>
    <string name="best_offer">лучшее предложение</string>
    <string name="addToCart">В корзину</string>
    <string name="other_offers">другие предложения</string>
    <string name="go_to_order">Перейти к оформлению</string>
    <string name="final_cost">Итого</string>
    <string name="final_cost_with_delivery">с учетом доставки</string>
    <string name="delivery_cost_free">бесплатно</string>
    <string name="delivery_date_tommorow">завтра</string>
    <string name="two_products">2 продукта</string>
    <string name="order_checkout">Оформить заказ</string>
    <string name="delete_offer">Удалить товар</string>
    <string name="you_are_cool_mom">Ты классная мама!</string>
    <string name="thank_for_purchase">Спасибо за покупку!</string>
    <string name="currency">руб.</string>
    <string name="from">от</string>
    <plurals name="shop_product">
        <item quantity="zero">%1$d товаров</item>
        <item quantity="one">%1$d товар</item>
        <item quantity="two">%1$d товара</item>
        <item quantity="few">%1$d товара</item>
        <item quantity="many">%1$d товаров</item>
        <item quantity="other">%1$d товаров</item>
    </plurals>
    <plurals name="from_shops">
        <item quantity="zero">Из %1$d магазинов</item>
        <item quantity="one">Из %1$d магазина</item>
        <item quantity="two">Из %1$d магазинов</item>
        <item quantity="few">Из %1$d магазинов</item>
        <item quantity="many">Из %1$d магазинов</item>
        <item quantity="other">Из %1$d магазинов</item>
    </plurals>
    <string name="delivery_date_today">сегодня</string>
</resources>
