<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/ic_clothes_for_03_age" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="16dp"
        android:text="@string/clothesfor03child"
        android:textColor="#e5000000"
        android:textSize="23sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/author_photo"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginLeft="16dp"
            android:src="@drawable/author_photo" />

        <TextView
            android:id="@+id/author_text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@+id/author_photo"
            android:text="@string/author_name"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/author_text_name"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@+id/author_photo"
            android:text="@string/nataly_bortnikova_workplace"
            android:textColor="#80000000"
            android:textSize="14sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="22dp"
        android:text="@string/nataly_bortnikova_speech"
        android:textColor="#e5000000"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="22dp"
        android:text="@string/walk_with_child_header"
        android:textColor="#e5000000"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/walk_with_child"
        android:textColor="#e5000000"
        android:textSize="16sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:src="@drawable/ic_clothes_for_03_age1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="45dp"
        android:text="@string/choose_clothes_header"
        android:textColor="#e5000000"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="22dp"
        android:paddingBottom="35dp"
        android:text="@string/choose_clothes"
        android:textColor="#e5000000"
        android:textSize="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:background="#e5e5e5"
        android:paddingBottom="19dp"
        android:paddingLeft="16dp"
        android:paddingTop="19dp"
        android:text="@string/what_you_should_buy"
        android:textColor="#e5000000"
        android:textSize="20sp" />

</LinearLayout>