<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/editTextCityText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingTop="16dp"
            android:text="@string/delivery_city"
            android:textSize="10sp" />

        <EditText
            android:id="@+id/editTextCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/editTextStreetText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/delivery_street"
            android:textSize="10sp" />

        <EditText
            android:id="@+id/editTextStreet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/editTextHouseText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/delivery_house"
            android:textSize="10sp" />

        <EditText
            android:id="@+id/editTextHouse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/editTextCommentText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/delivery_comment"
            android:textSize="10sp" />

        <EditText
            android:id="@+id/editTextComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/TextShop1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:paddingBottom="13dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="29dp"
            android:text="@string/delivery_shop_1"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/TextShop1Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingTop="12dp"
            android:text="@string/delivery_shop1_text"
            android:textSize="16sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/TextShop1Price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingBottom="14dp"
            android:text="@string/delivery_shop1_price"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/TextShop2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:paddingBottom="13dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="29dp"
            android:text="@string/delivery_shop_2"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/TextShop2Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingTop="12dp"
            android:text="@string/delivery_shop2_text"
            android:textSize="16sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/TextShop2Price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingBottom="14dp"
            android:text="@string/delivery_shop2_price"
            android:textSize="14sp" />
    </LinearLayout>
</ScrollView>