<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/order_delivery_shop_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="13dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="29dp"
        android:background="@color/anothergray"
        android:text="@string/delivery_shop"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/order_delivery_shop_delivery_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="12dp"
        android:text="@string/delivery_shop1_text"
        android:textSize="16sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/order_delivery_shop_delivery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="14dp"
        android:text="@string/delivery_shop1_price"
        android:textSize="14sp" />

</LinearLayout>