<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/sumText"
            android:textSize="14sp"
            android:fontFamily="sans-serif"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_delivery_sum_text" />

        <TextView
            android:id="@+id/order_sum_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_delivery_sum"
            android:textAlignment="textEnd"
            android:fontFamily="sans-serif"
            android:textSize="20sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/order_next"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimary"
        android:padding="13dp"
        android:text="@string/next"
        android:fontFamily="sans-serif"
        android:textAlignment="center"
        android:textColor="@color/black_color"
        android:textSize="16sp" />
</LinearLayout>