<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_toRightOf="@+id/center_position"
    android:layout_marginLeft="1dp"
    android:layout_marginBottom="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="110dp"
                android:layout_height="96dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="40dp"
                android:background="@color/colorPrimaryDark"/>

            <Button
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/ic_bookmark_border_black_24dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/icon_rating_45"
                android:layout_marginLeft="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/twelve_comments"
                android:textSize="12sp"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/body_with_long_sleeve"
            android:textSize="16sp"
            android:textColor="#e5000000"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/one_hundred_percent_cotton"
            android:textColor="#80000000"
            android:layout_marginLeft="16dp"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/not_many_rubles"
            android:layout_marginLeft="16dp" />

    </LinearLayout>
</android.support.v7.widget.CardView>