<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginRight="1dp"
    android:layout_marginBottom="1dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="110dp"
                android:layout_height="94dp"
                android:id="@+id/product_card_image"
                android:background="@color/cardview_light_background"
                android:layout_marginTop="36dp"
                android:layout_marginLeft="36dp"/>

            <ImageButton
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:id="@+id/bookmark_button"
                android:background="@color/cardview_light_background"
                android:padding="115dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/icon_rating_45"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twelve_comments"
                android:textSize="12sp"
                android:textColor="#80000000"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="19dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/product_card_name"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/body_with_long_sleeve"
                android:lines="2"
                android:textSize="16sp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:id="@+id/product_card_feature"
                android:text="@string/one_hundred_percent_cotton"
                android:textColor="#80000000"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/product_card_min_price"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/not_many_rubles"
                android:textColor="#000000"
                android:textSize="16sp"/>

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>